--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "add deepPopulate() to mongoose",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha"
   },
   "repository": {
     "type": "git",
@@ -19,5 +19,9 @@
   "bugs": {
     "url": "https://github.com/pgerlach/mongoose-deep-populate/issues"
   },
-  "homepage": "https://github.com/pgerlach/mongoose-deep-populate#readme"
+  "homepage": "https://github.com/pgerlach/mongoose-deep-populate#readme",
+  "devDependencies": {
+    "mocha": "^6.2.0",
+    "mongoose": "^5.6.8"
+  }
 }
